Complete app with fetching image

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
       <div class="col-md-2"></div>
 
       <div class="col-md-4 data">
-        <img src="anas.jpg" width="90px" height="90"  style="border-radius: 50%;"  ><br><br>
+        <img src="anas.jpg" width="90px" id="image" height="90"  style="border-radius: 50%;"><br><br>
 
-        <h5 class="text-success" id="name"><b>Name : <span style="font-style: italic; margin-left: 20px; color: white;"> Mohammad Anas </span></b></h5>
-        <h5 class="text-success" id="repo"><b>Repository : <span style="font-style: italic; margin-left: 20px; color: white;">22</span></b></h5>
-        <h5 class="text-success" id="un"><b>Username : <span style="font-style: italic; margin-left: 20px; color: white;">anasM0hammad</span></b></h5>
-        <h5 class="text-success" id="url"><b>Url : <span style="font-style: italic; margin-left: 20px; color: white;">http://github/anasM0hammad</span></b></h5>
+        <h5 class="text-success" ><b>Name : <span style="font-style: italic; margin-left: 20px; color: white;" id="name"></span></b></h5>
+        <h5 class="text-success"><b>Repository : <span style="font-style: italic; margin-left: 20px; color: white;"  id="repo"></span></b></h5>
+        <h5 class="text-success" ><b>Username : <span style="font-style: italic; margin-left: 20px; color: white;" id="un"></span></b></h5>
+        <h5 class="text-success" ><b>Followers : <span style="font-style: italic; margin-left: 20px; color: white;" id="followers"></span></b></h5>
+        <h5 class="text-success"><b>Url : <span style="font-style: italic; margin-left: 20px; color: white;" id="url"><a href=""></a></span></b></h5>
 
 
       </div>
