--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       width: 70%;
     }
 
-    .data{
+    .card{
       text-align: left;
       margin-top: 40px;
     }
@@ -49,7 +49,7 @@
    
     <div class="row" >
       <div class="col-md-6">
-        <h1 class="heading"> SHOW GIT</h1>
+        <h1 class="heading"> SHOW GIT</h1>sss
         <br>
         <p><b>An Application to find the Information <br> about a github user just by one click.</b></p>
         <br><br>
@@ -63,7 +63,7 @@
 
       <div class="col-md-2"></div>
 
-      <div class="col-md-4 data">
+      <div class="col-md-4 card">
         <img src="anas.jpg" width="90px" id="image" height="90"  style="border-radius: 50%;"><br><br>
 
         <h5 class="text-success" ><b>Name : <span style="font-style: italic; margin-left: 20px; color: white;" id="name"></span></b></h5>
